# Globalchat

./: .env  Cargo.toml  Readme.md
account-manager/src/: api.rs  main.rs  user.rs
frontend/: package.json
frontend/public/: index.html  manifest.json
frontend/src/: Account.js  App.css  App.js  Attachments.js  Globals.js  Icon.js  Main.js  Message.js  MessageSplat.js
src/: auth.rs  incoming.rs  lib.rs  main.rs  message.rs
tests/: message.rs
