[package]
name = "globalchat"
version = "0.1.0"
edition = "2021"
description = "Chat application. All needed is an account"
license = "MIT"
keywords = ["chat", "websockets", "realtime"]
authors = ["Artur Hoffsummer <artur.h.0427@gmail.com>"]

[dependencies]

## Websocket handling
tungstenite = "0.18.0"

## Http-requests for account manager
reqwest = "0.11.13"

## For parsing json request data into structs and vice versa
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
