[package]
name = "globalchat"
version = "0.1.0"
edition = "2021"
description = "Chat application. All needed is an account"
license = "MIT"
keywords = ["chat", "websockets", "realtime"]
authors = ["Artur Hoffsummer <artur.h.0427@gmail.com>"]

[dependencies]

## Websocket handling
tungstenite = "0.18.0"

## Http-requests for account manager
reqwest = "0.11.13"

## For parsing json request data into structs and vice versa
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"

## .env file reading
dotenv = "0.15.0"

## For global env variables
lazy_static = "1.4.0"

## UUID for message-ids
uuid = "1.2.2"
