[package]
name = "shitshat"
version = "0.1.0"
edition = "2021"
description = "Chat application. All needed is an account"
license = "MIT"
keywords = ["chat", "websockets", "realtime"]
authors = ["Artur Hoffsummer <artur.h.0427@gmail.com>"]

[lib]
path = "src/main.rs"

[dependencies]

## Websocket handling
tokio-tungstenite = "0.18.0"
tokio = { version = "1.24.1", features = ["macros", "rt-multi-thread"] }
futures-util = { version = "0.3.25", features = ["sink", "std"] }
futures-channel = "0.3.25"

## Http-requests for account manager
reqwest = { version = "0.11.13", features = ["blocking", "json"] }

## For parsing json request data into structs and vice versa
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"

## .env file reading
dotenv = "0.15.0"

## For global env variables
lazy_static = "1.4.0"

## UUID for message-ids
[dependencies.uuid]
version = "1.2.2"
features = [ "v4", "fast-rng" ]
